--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -11,18 +12,18 @@
         <com.marcinmoskala.arcseekbar.ArcSeekBar
             android:id="@+id/seekArc"
             android:layout_width="match_parent"
-            android:layout_height="100dp"
+            android:layout_height="200dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
+            android:layout_marginBottom="16dp"
+            app:enabled="false"
             app:layout_constraintBottom_toTopOf="@+id/tv_my_progress_title"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:progress="100"
-            app:progressBackgroundColor="@color/colorPrimaryDark"
+            app:progress="50"
+            app:progressBackgroundColor="#C2CACA"
             app:progressBackgroundWidth="20dp"
-            app:progressWidth="20dp"
-            app:roundEdges="true" />
+            app:progressWidth="20dp" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_my_progress_title"
@@ -49,6 +50,27 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <TextView
+            android:id="@+id/tv_goal"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="[6 months]"
+            android:textSize="18sp"
+            app:layout_constraintBottom_toBottomOf="@+id/seekArc"
+            app:layout_constraintEnd_toEndOf="@+id/seekArc"
+            app:layout_constraintStart_toStartOf="@+id/seekArc" />
+
+        <TextView
+            android:id="@+id/tv_goal_percentage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
+            android:text="[70.8%]"
+            android:textSize="30sp"
+            app:layout_constraintBottom_toTopOf="@+id/tv_goal"
+            app:layout_constraintEnd_toEndOf="@+id/seekArc"
+            app:layout_constraintStart_toStartOf="@+id/seekArc" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
