--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -9,21 +9,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <com.marcinmoskala.arcseekbar.ArcSeekBar
-            android:id="@+id/seekArc"
-            android:layout_width="match_parent"
-            android:layout_height="200dp"
+<!--        <com.marcinmoskala.arcseekbar.ArcSeekBar-->
+<!--            android:id="@+id/seekArc"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:layout_height="200dp"-->
+<!--            android:layout_marginStart="8dp"-->
+<!--            android:layout_marginEnd="8dp"-->
+<!--            android:layout_marginBottom="16dp"-->
+<!--            app:enabled="false"-->
+<!--            app:layout_constraintBottom_toTopOf="@+id/tv_my_progress_title"-->
+<!--            app:layout_constraintEnd_toEndOf="parent"-->
+<!--            app:layout_constraintStart_toStartOf="parent"-->
+<!--            app:progress="50"-->
+<!--            app:progressBackgroundColor="#C2CACA"-->
+<!--            app:progressBackgroundWidth="20dp"-->
+<!--            app:progressWidth="20dp" />-->
+
+        <SeekBar
+            android:id="@+id/seekBar"
+            android:layout_width="0dp"
+            android:layout_height="50dp"
             android:layout_marginStart="8dp"
             android:layout_marginEnd="8dp"
-            android:layout_marginBottom="16dp"
-            app:enabled="false"
-            app:layout_constraintBottom_toTopOf="@+id/tv_my_progress_title"
+            android:focusable="auto"
+            android:progress="70"
+            app:layout_constraintBottom_toTopOf="@+id/tv_goal_percentage"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:progress="50"
-            app:progressBackgroundColor="#C2CACA"
-            app:progressBackgroundWidth="20dp"
-            app:progressWidth="20dp" />
+            app:layout_constraintTop_toTopOf="parent" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/tv_my_progress_title"
@@ -55,11 +68,12 @@
             android:id="@+id/tv_goal"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="16dp"
             android:text="[6 months]"
             android:textSize="18sp"
-            app:layout_constraintBottom_toBottomOf="@+id/seekArc"
-            app:layout_constraintEnd_toEndOf="@+id/seekArc"
-            app:layout_constraintStart_toStartOf="@+id/seekArc" />
+            app:layout_constraintBottom_toTopOf="@+id/tv_my_progress_title"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
             android:id="@+id/tv_goal_percentage"
@@ -69,9 +83,9 @@
             android:text="[70.8%]"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_goal"
-            app:layout_constraintEnd_toEndOf="@+id/seekArc"
-            app:layout_constraintStart_toStartOf="@+id/seekArc" />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
