--- a/app/src/main/res/layout/mp_card_stats.xml
+++ b/app/src/main/res/layout/mp_card_stats.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
-        <com.example.sampleapp.views.SmokeFreeStatsItemView
+        <com.example.sampleapp.views.ProgressStatsItemView
             android:id="@+id/smokeFreeStatsItemView"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -16,7 +16,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <com.example.sampleapp.views.SmokeFreeStatsItemView
+        <com.example.sampleapp.views.ProgressStatsItemView
             android:id="@+id/smokeFreeStatsItemView1"
             android:layout_width="match_parent"
             android:layout_height="50dp"
@@ -25,7 +25,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/smokeFreeStatsItemView" />
 
-        <com.example.sampleapp.views.SmokeFreeStatsItemView
+        <com.example.sampleapp.views.ProgressStatsItemView
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="8dp"
