settings activity to and back navigation

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -9,19 +9,31 @@
         android:id="@+id/progressFragment"
         android:name="com.example.sampleapp.ui.ProgressFragment"
         android:label="fragment_progress"
-        tools:layout="@layout/fragment_progress" />
+        tools:layout="@layout/fragment_progress" >
+        <action
+            android:id="@+id/action_progressFragment_to_settingsActivity"
+            app:destination="@id/settingsActivity" />
+    </fragment>
     <fragment
         android:id="@+id/healthFragment"
         android:name="com.example.sampleapp.ui.HealthFragment"
         android:label="fragment_health"
-        tools:layout="@layout/fragment_health" />
+        tools:layout="@layout/fragment_health" >
+        <action
+            android:id="@+id/action_healthFragment_to_settingsActivity"
+            app:destination="@id/settingsActivity" />
+    </fragment>
     <fragment
         android:id="@+id/trophiesFragment"
         android:name="com.example.sampleapp.ui.TrophiesFragment"
         android:label="fragment_trophies"
-        tools:layout="@layout/fragment_trophies" />
-    <fragment
-        android:id="@+id/settingsFragment"
-        android:name="com.example.sampleapp.ui.SettingsFragment"
-        android:label="SettingsFragment" />
+        tools:layout="@layout/fragment_trophies" >
+        <action
+            android:id="@+id/action_trophiesFragment_to_settingsActivity"
+            app:destination="@id/settingsActivity" />
+    </fragment>
+    <activity
+        android:id="@+id/settingsActivity"
+        android:name="com.example.sampleapp.SettingsActivity"
+        android:label="SettingsActivity" />
 </navigation>
