--- a/app/src/main/res/layout/mp_item_stats.xml
+++ b/app/src/main/res/layout/mp_item_stats.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="50dp">
 
@@ -10,7 +10,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:text="[Money saved]"
+        android:text="[Dummy title]"
         app:layout_constraintBottom_toBottomOf="@+id/iv_item_icon"
         app:layout_constraintStart_toEndOf="@+id/iv_item_icon"
         app:layout_constraintTop_toTopOf="@+id/iv_item_icon" />
