--- a/app/src/main/res/layout/fragment_progress.xml
+++ b/app/src/main/res/layout/fragment_progress.xml
@@ -70,7 +70,7 @@
                         android:id="@+id/tv_card_history_title"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="[During that period:]"
+                        android:text="@string/history_card_title"
                         android:textAppearance="@style/TextAppearance.AppCompat.Large"
                         android:textColor="@color/black"
                         app:layout_constraintEnd_toEndOf="parent"
