goal in DB and UI

--- a/app/src/main/res/layout/fragment_goal_list_dialog_item.xml
+++ b/app/src/main/res/layout/fragment_goal_list_dialog_item.xml
@@ -9,5 +9,6 @@
     android:paddingTop="@dimen/list_item_spacing_half"
     android:paddingRight="@dimen/list_item_spacing"
     android:paddingBottom="@dimen/list_item_spacing_half"
+    android:textAlignment="center"
     android:textAppearance="@style/TextAppearance.AppCompat.Large"
-    tools:text="Hello" />
+    tools:text="1 month" />
