--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -69,7 +69,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="[GOAL 6 months]"
+            tools:text="GOAL 6 months"
             android:textSize="18sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_my_progress_title"
             app:layout_constraintEnd_toEndOf="parent"
