--- a/app/src/main/res/layout/mp_card_progress.xml
+++ b/app/src/main/res/layout/mp_card_progress.xml
@@ -82,7 +82,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
-            android:text="[70.8%]"
+            tools:text="70.8%"
             android:textSize="30sp"
             app:layout_constraintBottom_toTopOf="@+id/tv_goal"
             app:layout_constraintEnd_toEndOf="parent"
