recycler view in health cards

--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -16,7 +16,7 @@
     </fragment>
     <fragment
         android:id="@+id/healthFragment"
-        android:name="com.example.sampleapp.ui.HealthFragment"
+        android:name="com.example.sampleapp.ui.health.HealthFragment"
         android:label="fragment_health"
         tools:layout="@layout/fragment_health" >
         <action
