--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -2,4 +2,6 @@
 <resources>
     <dimen name="list_item_spacing">16dp</dimen>
     <dimen name="list_item_spacing_half">8dp</dimen>
+    <dimen name="health_list_item_spacing">10dp</dimen>
+    <dimen name="health_list_item_spacing_half">5dp</dimen>
 </resources>
