health cards with progress calculation and texts

--- a/app/src/main/res/layout/mh_card_view.xml
+++ b/app/src/main/res/layout/mh_card_view.xml
@@ -29,7 +29,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="16dp"
-            android:text="[100%]"
+            tools:text="100%"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/tv_description" />
@@ -41,7 +41,7 @@
             android:layout_marginStart="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="16dp"
-            android:text="[After 20 minutes: Your blood pressure and heart rate decrease.]"
+            tools:text="After 20 minutes: Your blood pressure and heart rate decrease."
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -52,7 +52,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:layout_marginBottom="20dp"
-            android:text="[Achieved]"
+            tools:text="Achieved"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
