--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-
-    <color name="colorPrimary">#fbc02d</color>
-    <color name="colorPrimaryDark">#c49000</color>
-    <color name="colorPrimaryLight">#fff263</color>
-    <color name="colorAccent">#fff263</color>
+    <color name="colorPrimary">#03A9F4</color>
+    <color name="colorPrimaryDark">#0288D1</color>
+    <color name="colorPrimaryLight">#B3E5FC</color>
+    <color name="colorAccent">#FF9800</color>
+    <color name="colorPrimaryText">#212121</color>
+    <color name="colorSecondaryText">#757575</color>
+    <color name="colorDivider">#BDBDBD</color>
 
     <color name="white">#fff</color>
     <color name="black">#000</color>
-    
-    <color name="list_item_odd_bg">#41FF9800</color>
-
 </resources>
