--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -12,6 +12,18 @@
         <item name="colorControlNormal">@color/white</item>
     </style>
 
+    <style name="ProgressSeekBar">
+        <item name="android:progress">0</item>
+        <item name="android:secondaryProgress">0</item>
+        <item name="android:paddingStart">0dp</item>
+        <item name="android:paddingEnd">0dp</item>
+        <item name="android:progressDrawable">@drawable/mp_seekbar</item>
+        <item name="android:minHeight">50dp</item>
+        <item name="android:maxHeight">50dp</item>
+        <item name="android:thumb">@null</item>
+        <item name="android:background">@null</item>
+    </style>
+
     <style name="ProgressCardMainTitle">
         <item name="android:textColor">@color/white</item>
         <item name="android:textSize">20sp</item>
