--- a/app/src/main/res/layout/mp_item_stats.xml
+++ b/app/src/main/res/layout/mp_item_stats.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/root_view"
     android:layout_width="match_parent"
     android:layout_height="50dp">
@@ -10,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
-        android:text="[Dummy title]"
+        android:textColor="@color/colorSecondaryText"
+        tools:text="Money saved"
         app:layout_constraintBottom_toBottomOf="@+id/iv_item_icon"
         app:layout_constraintStart_toEndOf="@+id/iv_item_icon"
         app:layout_constraintTop_toTopOf="@+id/iv_item_icon" />
@@ -19,8 +21,9 @@
         android:id="@+id/tv_item_value"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="24dp"
-        android:text="[1771.88€]"
+        android:layout_marginEnd="16dp"
+        android:textColor="@color/colorSecondaryText"
+        tools:text="1771.88€"
         app:layout_constraintBottom_toBottomOf="@+id/iv_item_icon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="@+id/iv_item_icon" />
@@ -29,10 +32,10 @@
         android:id="@+id/iv_item_icon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="24dp"
+        android:layout_marginStart="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/mp_ic_money" />
+        tools:srcCompat="@drawable/mp_ic_money" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
