--- a/app/src/main/res/menu/menu_toolbar_actions_main.xml
+++ b/app/src/main/res/menu/menu_toolbar_actions_main.xml
@@ -3,9 +3,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:id="@+id/group_settings">
+
         <item
-            android:id="@+id/settingsFragment"
+            android:id="@+id/menu_item_settings"
             android:title="@string/menu_settings_title" />
+
     </group>
 
 </menu>
